/*
  Localizable.strings
  Safeye

  Created by Pavlo Leinonen on 19.4.2022.
  
*/

// Sign in

"signInTitle" = "Sign in";
"emailTitle" = "Your email address";
"emailPlaceholder" = "Email address";
"passwordTitle" = "Your password";
"passwordPlaceholder" = "Password";
"signInButton" = "Sign in";
"createNewAcc" = "Create a new account"; // "Or sign up instead"

// Create new account

"createNewTitle" = "Create new account"; // "Sign up"
"emailTitle" = "Your email address";
"emailPlaceholder" = "Email address";
"passwordTitle" = "Your password";
"passwordPlaceholder" = "Password";
"signUpButton" = "Create account";  // "Sign up" "Register"
"backToSignIn" = "Sign in";
// Alert in case wrong input
"loginAlertTitle" = "Login failed";
"okBtn" = "OK";
// Two extra empty keys
"extraOne" = "";
"extraTwo" = "";

// Create profile

"youDecidetext" = "You decide who sees your profile";
"textProfile" = "In order to be safe, you must create a profile";
"createProfileBtn" = "Create a profile";

"textProfileUpdate" = "Please fill the fileds you want to update";
"textProfileBlanc" = "Please fill all fields to create new profile";
"fullNameTitle" = "Your full name";
"fullNamePlaceholder" = "Full name";
"addressTitle" = "Your address";
"addressPlaceholder" = "Address";
"birthdayTitle" = "Your birthday";
"birthdayPlaceholder" = "Birthday";
"bloodTypeTitle" = "Choose your blood type";
"illnessTitle" = "Your illness";
"illnessPlaceholder" = "Illness";
"allergiesTitle" = "Your allergies";
"allergiesPlaceholder" = "Allergies";
"saveBtn" = "Save & go back";
// Alert in case wrong input
"fieldAlertTitle" = "Fill all fields";
"fieldAlertText" = "Please fill all fields";
"okBtn" = "OK";


// SETTINGS

"signOut" = "Sign out";
"connection" = "Connection code";
"copyBtn" = "Copy"; // might be an icon
"nocode" = "No code";

"lightMode" = "Light";
"darkMode" = "Dark";
"settingsTitle" = "Settings";
"updateCoordinatesBtn" = "Update Home Coordinates";
"updateCoordinatesInfo" = "Once 'Update home coordinates' is clicked, your coordinates will be automatically updated to match your current location.";
"aboutSafeye" = "About Safeye";
"faqTitle" = "FAQ";
"privacyTitle" = "Privacy";
"howItWorksTitle" = "How it works";
"infoSettingsTitle" = "Information";

// Info section
//"aboutSafeyeText" = "**Safeye** is an app that will bring you the peace of mind when you or your loved ones go out and might end up in unsafe situations.\n\nWith the help of **Safeye**, you can let those closest to you know when you are heading out on a first date, a night at a bar or a dinner with friends and allow your contacts to keep an eye on you. **Safeye** allows them to see your location and you can alert your friends if you get into a dangerous situation.\n\n*Safeye is here to keep you safe!*";
//"privacyText" = "Your privacy is important to us, therefore the users of Safeye have limited access to information about you. Bellow are the details about  information visibility.";
//"howItWorksContact" = "Make sure to add at least one contact on Safeye.";
//"howItWorksEvent" = "Create a new event: fill out the event details and select contacts.";
//"howItWorksEmergency" = "In case of an emergency, tap SOS. Your location will be tracked and Safeye will record messages of anything it can detect in your surroundings.";
//"howItWorksAlert" = "Your contacts will be alerted. They will be able to see your live location and read recorded messages.";
//"howItWorksSafe" = "When you're safe again, tap SAFE to disable the emergency mode.";
//"howItWorksDelete" = "Once your event is over and you're in a safe location, you can delete the event. This will also delete any information related to it.";
//"faqContactQ" = "Why do I need to have connections on Safeye and how to add one?";
//"faqContactA" = "Your connections are people you trust the most. Once you add them as contacts in Safeye, they can be selected in your future events. That allows them to see your event information, your location during the  event and any recorded messages. In case of an emergency, Safeye alerts your contacts by letting them know that you need their help. Based on your location information and any recorded messages, your contacts can then decide what is the best way to help you.\n\nTo add a new contact, navigate to 'Connections' tab. Copy your personal 'connection code' and share it with your friends. They then can search for you on Safeye using your code and add you as a contact. Then all you need to do, is to confirm their request. Likewise, if someone has shared their connection code with you, you can just click on 'Add a new contact', search for your friend using the connection code and send them a request.";
//"faqSafeSpaceQ" = "What is a safe space and how to add one?";
//"faqSafeSpaceA" = "A safe space is any location that you know you can go to in case of an emergency. It can be your mom's work address, a local library, a shop open 24/7 or any other location you that you can think of.\n\nTo add a new safe space, navigate to 'Profile' and click on 'Add new' in 'My safe spaces' section. Then type in the address and click 'Save'. In addition to adding safe spaces manually, your contact home addresses will be saved to your safe spaces automatically once you add them as a contact. You can always find your safe spaces in the 'Profile' tab by clicking 'View on map'.";
//"faqEventQ" = "What are events and how to create one?";
//"faqEventA" = "Events are Safeye's way of letting your contacts know you will be going out and will be needing them to keep a watchful eye on you.\n\nYou can create a new event in the 'Home' tab. Just fill out the event details and select those contacts that you want to have access to your event and location information while the event is active. Only those contacts that you select for the event will be sent an alert in case of an emergency. Likewise, those contacts that you do not select will not be able to see any information about the event or your location. Similarly, your contacts can add you to their events.\n\nTo delete an event, go to the 'Home' tab, find the event you want to delete and swipe left. This will also delete any information associated with the event, such as your event details, location information or any messages that were recorded.";
//"faqEmergencyQ" = "What is the emergency mode and how to enable/disable it?";
//"faqEmergencyA" = "Any situation in which you feel unsafe qualifies for an emergency. To activate the emergency mode, go to your event and click the big red 'SOS' button. This will activate location tracking, your contacts will be alerted and Safeye will start periodically recording any messages that it can hear from your surroundings. Your contacts can then see your location, read the recorded messages and based on that determine how best to help you.\n\nTo disable the emergency mode, just click the big green button 'Safe'. The event will still continue, but emergency mode will be disabled.\n\nIn case of grave danger, please call 112 or the local emergency number.";
//"faqMessageQ" = "What are recorded messages, how to add one and how are they used?";
//"faqMessageA" = "Recorded messages come in two types on Safeye. The first one is a message that you can record during your event. Just navigate to your event and click 'Record Message'. This will log whatever you are saying. Then just click 'Save/update your message' and it will be saved for your contacts to see.\n\nAnother type of messages are those that are recorded automatically. Once you activate the emergency mode, Safeye starts recording any speech that it can hear from you and your surroundings and save those messages for your contacts to read. It helps your friends and loved ones to determine what situation you are in and how best to help you. Once the event is deleted, all the messages are deleted as well.";
//"faqHealthQ" = "Why do you need my health information?";
//"faqHealthA" = "In case of a serious emergency, those contacts that you add to an event would be able to share that information with any emergency services. This could potentially benefit them in helping you.";
//"privacyItemProfile" = "Profile picture";
//"privacyItemName" = "Full name";
//"privacyItemHealth" = "Health details";
//"privacyItemAddress" = "Home address";
//"privacyItemEvent" = "Event details";
//"privacyItemLocation" = "Live location";
//"privacyItemRecord" = "Recorded messages";
//"privacyGroupProfile" = "Your contacts,\nother Safeye users";
//"privacyGroupName" = "Your contacts,\nother Safeye users";
//"privacyGroupHealth" = "Your contacts";
//"privacyGroupAddress" = "Your contacts";
//"privacyGroupEvent" = "Your event contacts";
//"privacyGroupLocation" = "Your event contacts";
//"privacyGroupRecord" = "Your event contacts";

// HOME

"eventsNumber" = "events";
"createNewEventBtn" = "Create new event";
"yourEventsTitle" = "YOUR EVENTS";
"yourFriendsEventsTitle" = "YOUR FRIEND´S EVENTS";
"eventInfoTitle" = "Started";

// Tracking mode view
"safeStatusTitle" = "Started";
"panicStatusTitle" = "Panic";
"startedStatusTitle" = "Started";
"deleteBtn" = "Delete";
"trustedContactsTrack" = "TRUSTED CONTACTS";
"eventdDetailsTrack" = "EVENT DETAILS";
"startTrack" = "Starting from:";
"endTrack" = "Ending at:";
"eventTypeTrack" = "Event type:";
"otherTrack" = "Other info:";
"viewOnMapBtn" = "View Tracked User On Map";
"showRecordedBtn" = "Show recorded messages";
"recordMessageBtn" = "Record Message";

//Tracking mode copmponent
"sosBtn" = "SOS";
"safeBtn" = "Safe";
// Recording view
"recordedMessages" = "Recorded messages";
"recordedYourMessages" = "Your recorded messages";
"SaveUpdateBtn" = "Save/Update Your Message";
"cancelRecording" = "Cancel Recording";

// Create event view
"selectContactsTitle" = "SELECT CONTACTS FOR THE EVENT*";
"createEventInfoText" = "These contacts will be able to see events details";
"dateAndTime" = "ESTIMATED EVENT DATE AND TIME";
"startTime" = "Start*";
"endTime" = "End";
"eventType" = "EVENT TYPE*";
"addContactBtn" = "add";
"removeContactBtn" = "remove";
"location" = "Location";

// Event types
"selectEventType" = "Select event type";
"barNight" = "Bar night";
"nightClub" = "Night club";
"dinner" = "Dinner";
"houseParty" = "House party";
"firstDate" = "First date";
"otherType" = "Other";

"otherDetailTitle" = "OTHER VALUABLE DETAILS";
"detailPlaceholder" = "Anything else?";
"saveActivateBtn" = "Save & activate";
"addEventInfo" = "Add event information";
"savingEventInfo" = "Saving will also enable the tracking mode";

// PROFILE

"trustedContactsTitle" = "My trusted contacts";
"bornTitle" = "Born:";
"bloodTitle" = "Blood type";
"illnessTitle" = "Illness";
"allergiesTitle" = "Allergies";
"safeSpaceTitle" = "My safe spaces";
"noPlaceYet" = "You haven't yet added any places";
"viewOnMap" = "View on map";
"addNew" = "Add new";
"noName" = "No name";

// Edit profile
"selectPhoto" = "Select profile photo";
"country" = "Country";
"finland" = "Finland";
"sweden" = "Sweden";
"estonia" = "Estonia";
"denmark" = "Denmark";
"norway" = "Norway";

// Add contacts
"codeInput" = "Connection code...";
"searchBtn" = "Search";
"addBtn" = "Add";
"nothingTitle" = "Nothing to display";
"errorSearch" = "To search, enter a valid connection code.";

// Add safe space
"chooseMapBtn" = "Choose from map?";
"addSafeBtn" = "Add";
"nameSafe" = "Name";
"streetSafe" = "Street";
"citySafe" = "City";
"zipSafe" = "Zip";
"foundWord" = "Found";
"placesWord" = "places";

// CONNECTIONS

"connectionsTitle" = "CONNECTIONS";
"receivedReqTitle" = "RECEIVED REQUESTS";
"sentReqTitle" = "SENT REQUESTS";
"acceptBtn" = "accept";
"profileBtn" = "profile";
"cancelReq" = "cancel";
"connectionCode" = "Connection code";
"connectiontInfo" = "Your connection code is the only way people can find you on Safeye. Share it with others and they'll be able to send you a connection request.";
"noCode" = "No code";
"addNewContact" = "Add a new contact";
"fullNameContact" = "Full name";
"sentContactBtn" = "sent";

// NAVITEM
"homeNav" = "Events";
"profileNav" = "Profile";
"connectNav" = "Connections";
"settingsNav" = "Setting";

// Components
"friendAlert" = "Friend needs your help!";
"imageAvatarError" = "There was an error loading the image.";
"focusBtn" = "Focus";
"trustedContactsMap" = "Trusted Contacts";
"noAddedContacts" = "You have not added any contacts.";
"headline" = "Headline";
"settingsItemText" = "TLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.";
"firstLastName" = "Firstname Lastname";
"maybeHomeAddress" = "Maybe home address?";
"healthDetail" = "Health details";

// Additional
"alertFillAllfields" = "Please fill all form fields";
"showMessagesBtn" = "Show messages";
"alertHomeCoordinates" = "Home coordinates updated!";
"noHomeSet" = "No home set";
"removeAll" = "Remove all contacts";
"selectAll" = "Select all contacts";
"personDetails" = "Person details";
"healthDetails" = "Health details";

"connectionAlreadyExists" = "This connection already exists.";
"requestAlreadySent" = "You have sent a request to this user.";
"requestAlreadyRecieved" = "You have recieved a request by this user.";

"userNotFound" = "User not found";
"cantAddYourself" = "You cannot add yourself";

"connectionReqSuccesess" = "Connection request sent successfully.";
"errorConnectionReq" = "An error occured while sending a connection request.";

"aboutSafeyeText" = "**Safeye** is an app that will bring you the peace of mind when you or your loved ones go out and might end up in unsafe situations.\n\nWith the help of **Safeye**, you can let those closest to you know when you are heading out on a first date, a night at a bar or a dinner with friends and allow your contacts to keep an eye on you. **Safeye** allows them to see your location and you can alert your friends if you get into a dangerous situation.\n\n*Safeye is here to keep you safe!*";

"privacyText" = "Your privacy is important to us, therefore the users of Safeye have limited access to information about you. Bellow are the details about  information visibility.";
